    1.50    2014-01-11 MC
            Replace all tests for None with is None and is not None
            VIVO URI always appear in rdf:resource assertions
    1.51    2014-03-25 MC
            find_vivo_uri will return a single URI having the predicate and
            value. Useful for finding uri from other identifier such as uri
            ufid
    1.52    2014-03-28 MC
            Add lang and datatype support to assert_data_property.  New
            function get_value returns lang and datatype. Add newline to
            rdf_header.  Add xml declaration to rdf_header.  Add newline to
            rdf_footer.  Add dict support to update_data_property
    1.53    2014-03-29 MC  
            Add lang and datatype support to get_grant
    1.54    2014-04-06 MC
            Add unicode support for UTF-8 to read_csv
    1.55    2014-05-04 MC
            Restore escape to update data_property
    1.56    2014-05-05 MC
            merge_uri to create add and sub rdf for merging to uris.
            remove_uri updated to handle xml lang and datatype
            translate_predicate added to support remove_uri and merge_uri
    1.57    2014-05-19 MC
            Patch get_publication to handle authorship with no author rank
            Add make_date_dictionary
    1.58    2014-06-03 MC
            Improvements in document_from_pubmed to handle missing data in
            Entrez. Add untag_predicate. Adjust new line in
            assert_resource_property to match new line usage
            assert_data_property. New parameters in update_pubmed to support
            adding pubmed attributes to papers not yet in VIVO. New
            parameters added to get_pubmed_values to support getting values
            from either doi or pmid
    1.59    2014-06-21 MC
            get_types returns a list of types for a specified URI
	1.60	2014-07-12 MC
			improve RDF formatting for webpage and concept
	2.00    2014-07-18 MC
			Beginning work on Tools 2.0 for the 1.6 upgrade