@@ -208807,8 +208807,8 @@ UFID|UF_SECURITY_FLG|UF_PROTECT_FLG|UF_PUBLISH_FLG
 80136167|N|N|Y
 80136266|N|N|Y
 80136411|N|N|Y
-80136421|N|N|N
-80136440|N|N|Y
+80136421|Y|N|N
+80136440|N|Y|Y
 80136441|N|N|Y
 80136526|N|N|Y
 80136618|N|N|Y
