@@ -5,14 +5,16 @@
     --  Initial version.
     Version 0.2 MC 2014-07-15
     --  Add Study
+    Version 0.3 MC 2014-07-22
+    --  Upgraded for tools 2.0
 """
 
 __author__ = "Michael Conlon"
 __copyright__ = "Copyright 2014, University of Florida"
 __license__ = "BSD 3-Clause license"
-__version__ = "0.2"
+__version__ = "0.3"
 
-from vivotools import get_triples
+from vivofoundation import get_triples
 
 #  Test cases for get_triples
 
@@ -32,7 +34,7 @@ print "\nRole"
 print get_triples("http://vivo.ufl.edu/individual/n1864549239")
 
 print "\nPerson"
-print get_triples("http://vivo.ufl.edu/individual/n39051")
+print get_triples("http://vivo.ufl.edu/individual/n3715")
 
 print "\nNot Found"
 print get_triples("http://vivo.ufl.edu/notfound")
