@@ -85,3 +85,6 @@ VIVO Tools Change log
 			improve RDF formatting for webpage and concept
 	2.00    2014-07-18 MC
 			Beginning work on Tools 2.0 for the 1.6 upgrade
+			VIVO_QUERY_URI can now be used to direct sparql queries at an
+			VIVO_URI_PREFIX is now used to indicate the URI of randomly 
+			generated uris.  Used by get_vivo_uri()
